--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@alpinejs/focus": "^3.10.5",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.0",
-    "alpinejs": "^3.12.0",
+    "alpinejs": "^3.13.2",
     "autoprefixer": "^10.4.7",
     "axios": "^1.1.2",
     "laravel-vite-plugin": "^0.7.2",
@@ -17,7 +17,8 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "datatables": "^1.10.18"
+    "datatables": "^1.10.18",
+    "livewire": "^0.6.1"
   },
   "name": "ipacs2",
   "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
