--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.29",
         "rappasoft/laravel-livewire-tables": "^2.15",
         "spatie/laravel-permission": "^5.10"
     },
